Wood, and crafting system.